--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">FoodApp</a>
             <div class="navbar-nav ms-auto">
-                <a class="nav-item nav-link" href="#">Add Item</a>
+                <a class="nav-item nav-link" href="{%url 'food:create_item'%}">Add Item</a>
                 <a class="nav-item nav-link" href="#">Delete Item</a>
                 <a class="nav-item nav-link" href="#">View Item</a>
             </div>
