--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -12,6 +12,7 @@
             <h1>{{ item.item_name }}</h1>
             <h2>{{ item.item_desc }}</h2>
             <h3>Price: ₹{{ item.item_price }}</h3>
+            <a href="{% url 'food:delete_item' item.id %}">delete</a>
         </div>
     </div>
 </div>
