--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -15,13 +15,29 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">FoodApp</a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-item nav-link" href="{%url 'food:create_item'%}">Add Item</a>
-                <a class="nav-item nav-link" href="#">Delete Item</a>
-                <a class="nav-item nav-link" href="#">View Item</a>
-            </div>
+        <div class="navbar-nav ms-auto">
+
+           <a class="nav-item nav-link" href="{% url 'food:create_item' %}">Add Item</a>
+            <a class="nav-item nav-link" href="#">Delete Item</a>
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'profile' %}">profile</a>
+            {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </div>
+
         </div>
     </nav>
+
+    {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
+
 
     <div class="container mt-4">
         {% block body %}
