--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -13,6 +13,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ item.item_name }}</h5>
                         <p class="card-text">{{ item.item_desc }}</p>
+                        <h6>{{item.user_name}}</h6>
                         <p class="card-text">
                             <small class="text-muted">Price: ₹{{ item.item_price }}</small>
                         </p>
