--- a/food/templates/food/item-delete.html
+++ b/food/templates/food/item-delete.html
@@ -1,9 +1,16 @@
-<form method="POST">
-    {% csrf_token %}
-    <h2>
-        are you sure you want to delete {{item.item_name}}
-        <button
-            type = "submit">Confirm
-        </button>
-    </h2>
-</form>
+{% for item in item_list %}
+    <div class="card mb-3">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <h5>{{ item.item_name }}</h5>
+            <div>
+                <a href="{% url 'food:detail' item.id %}" class="btn btn-info btn-sm">Details</a>
+                
+                <!-- Delete Form -->
+                <form method="POST" action="{% url 'item-delete' item.id %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endfor %}
