--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,22 @@
-<form method = "POST">
-    {% csrf_token %}
-    {{form}}
-    <button type="submit">login</button>
-</form>
+{% extends "food/base.html" %}
+
+{% block body %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h4 class="mb-0">Login</h4>
+                </div>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
