--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,19 @@
-<h1>
-    {{ user.username }}
-</h1>
-<img width = "100px" height = "100px" src="{{user.profile_pictures.image.url}}">
+{% extends "food/base.html" %}
+{% block body %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm text-center p-4">
+                <div class="mb-3">
+                    <img src="{{ user.profile.image.url }}" 
+                         alt="{{ user.username }}'s Profile Picture" 
+                         class="rounded-circle img-fluid" 
+                         style="width: 120px; height: 120px; object-fit: cover;">
+                </div>
+                <h3 class="mb-0">{{ user.username }}</h3>
+                <p class="text-muted">Welcome to your profile</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
