--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -18,7 +18,7 @@
         <div class="navbar-nav ms-auto">
 
            <a class="nav-item nav-link" href="{% url 'food:create_item' %}">Add Item</a>
-            <a class="nav-item nav-link" href="#">Delete Item</a>
+            {% comment %} <a class="nav-item nav-link" href="#">Delete Item</a> {% endcomment %}
             {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">profile</a>
